--- a/braveu/src/CSS/about.css
+++ b/braveu/src/CSS/about.css
@@ -24,11 +24,12 @@
 .our_team_head{
   margin-left: 670px;
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
 }
 
 .abt_cards{
   margin: 10px;
+  padding: 100px;
 }
 
 *, *:before, *:after {
